--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 									</ul>
 								</li> 
-																<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+																<li class="nav-item"><a class="nav-link" href="#"></a></li>
 
 							</ul>
 						</div> 
