--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<h4>SENIOR GAME DEVELOPER</h4>
 									<p></p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 2st MAY, 1997</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 2st MAY</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> saridizayn@hotmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Turkey / İstanbul</a></li>
 									</ul>
